cmake_minimum_required(VERSION 3.2)
project(Executable)
include(CMakeMacros.cmake)

if(UNIX)
   set(CMAKE_CXX_FLAGS "-std=c++1z -Wall -Wextra -Werror -pthread -Wno-unused-parameter")
   if(${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
      append(CMAKE_CXX_FLAGS "--stdlib=libc++ pedantic -Wno-gnu-zero-variadic-macro-arguments")
   elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
      append(CMAKE_CXX_FLAGS "-Wno-attributes")
   endif()
elseif(MSVC)
   set(CMAKE_CXX_FLAGS "/std:c++latest /W4 /WX /EHsc /MP")
   replace(CMAKE_EXE_LINKER_FLAGS_DEBUG "/debug" "/debug:fastlink")
   set_property(GLOBAL PROPERTY USE_FOLDERS ON)
endif()

add_subdirectory(Executable)
add_subdirectory(StaticLibrary)
add_subdirectory(StaticLibraryTests)
