cmake_minimum_required(VERSION 3.20)
project(ZenUnitTestUtils)
include(${CMAKE_SOURCE_DIR}/CMakeMacros.cmake)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
include_directories(${CMAKE_SOURCE_DIR})
include_directories(${ZenUnitIncludeDirectory})

folder_source_group(EqualizersAndRandoms)
folder_source_group(MetalMock)

file(GLOB_RECURSE sourceFilePaths *.h *.cpp)
source_group("" FILES ${sourceFilePaths})

add_library(ZenUnitTestUtils ${sourceFilePaths})
if(UNIX)
   target_precompile_headers(ZenUnitTestUtils PRIVATE pch.h)
   set_target_properties(ZenUnitTestUtils PROPERTIES UNITY_BUILD ON)
   set_target_properties(ZenUnitTestUtils PROPERTIES UNITY_BUILD_BATCH_SIZE 10)
elseif(MSVC)
   IfMSVCEnablePrecompiledHeaders()
   set_target_properties(ZenUnitTestUtils PROPERTIES UNITY_BUILD ON)
   set_target_properties(ZenUnitTestUtils PROPERTIES UNITY_BUILD_BATCH_SIZE 5)
   append(CMAKE_CXX_FLAGS "/FIpch.h")
endif()

if(UNIX)
   if(LCovCodeCoverageMode)
     target_link_libraries(ZenUnitTestUtils CodeCovLibraryInterface)
   endif()
endif()
