cmake_minimum_required(VERSION 3.2)
project(ZenUnitTests)
include(${CMAKE_SOURCE_DIR}/CMakeMacros.cmake)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
include_directories(${CMAKE_SOURCE_DIR})
include_directories(${CMAKE_SOURCE_DIR}/ZenUnit)
include_directories(${ZenMockIncludeDirectory})
if(EXISTS ${GoogleBenchmarkIncludeDirectory})
   include_directories(${GoogleBenchmarkIncludeDirectory})
endif()

folder_source_group(Anomaly)
folder_source_group(Args)
folder_source_group_subfolder(Args Mock)
folder_source_group(Assertions)
folder_source_group(Console)
folder_source_group_subfolder(Console Mock)
folder_source_group(Equalizers)
folder_source_group(Random)
folder_source_group(Utils)
folder_source_group_subfolder(Utils Function)
folder_source_group_subsubfolder(Utils Function Mock)
folder_source_group_subfolder(Utils Mock)
folder_source_group_subfolder(Utils Concurrency)
folder_source_group_subsubfolder(Utils Concurrency Mock)
folder_source_group_subfolder(Utils Iteration)
folder_source_group_subsubfolder(Utils Iteration Mock)
folder_source_group_subfolder(Utils Time)
folder_source_group_subsubfolder(Utils Time Mock)
folder_source_group(Registration)
folder_source_group(Results)
folder_source_group_subfolder(Results Mock)
folder_source_group(TestRunners)
folder_source_group_subfolder(TestRunners Mock)
folder_source_group(Testing)
folder_source_group(Tests)
folder_source_group_subfolder(Tests Mock)
folder_source_group(ToStringer)
folder_source_group_subfolder(ToStringer ZenUnitPrinter)
folder_source_group_subfolder(ToStringer SFINAE)
source_group("" FILES ZenUnitTestsMain.cpp pch.h pch.cpp)
file(GLOB_RECURSE Sources *.h *.cpp)

add_executable(ZenUnitTests ${Sources})
if(EXISTS ${GoogleBenchmarkIncludeDirectory})
   target_link_libraries(ZenUnitTests ${GoogleBenchmarkLibraryPath})
   if(WIN32)
      target_link_libraries(ZenUnitTests shlwapi)
   endif()
endif()

EnablePrecompiledHeaders()
IfMSVCAddRunTestsPostBuildStep()
