cmake_minimum_required(VERSION 3.2)
project(ZenUnitUtilsAndAssertionTests)
include(${CMAKE_SOURCE_DIR}/CMakeMacros.cmake)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
include_directories(${CMAKE_SOURCE_DIR})
include_directories(${ZenUnitIncludeDirectory})
include_directories(${ZenMockIncludeDirectory})

folder_source_group(Assertions)
folder_source_group_subfolder(Components FunctionCallers)
folder_source_group_subsubfolder(Components FunctionCallers ZenMock)
folder_source_group_subfolder(Components ZenMock)
folder_source_group_subfolder(Components Concurrency)
folder_source_group_subsubfolder(Components Concurrency ZenMock)
folder_source_group_subfolder(Components Iteration)
folder_source_group_subsubfolder(Components Iteration ZenMock)
folder_source_group_subfolder(Components Time)
folder_source_group_subsubfolder(Components Time ZenMock)
folder_source_group(Testing)
folder_source_group(StaticComponents)
folder_source_group(ValueTypes)

source_group("" FILES ZenUnitUtilsAndAssertionTestsMain.cpp pch.h pch.cpp)
file(GLOB_RECURSE Sources *.h *.cpp)

add_executable(ZenUnitUtilsAndAssertionTests ${Sources})
target_link_libraries(ZenUnitUtilsAndAssertionTests ZenUnitTestUtils)

if(UNIX)
   target_link_libraries(ZenUnitUtilsAndAssertionTests stdc++fs)
endif()

EnablePrecompiledHeaders()
IfMSVCAddRunTestsPostBuildStep()
